--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,8 @@
 events {}
 
 http {
-    # CORS для всех доменов technobar.by
+    # Общие CORS заголовки
+
     map $http_origin $cors {
         default "";
         ~^https?://(.*\.technobar\.by|technobar\.by)$ $http_origin;
@@ -11,7 +12,7 @@ http {
         server nextjs-app:3000;
     }
 
-    # Редирект HTTP -> HTTPS
+    # Редирект HTTP -> HTTPS для всех доменов
     server {
         listen 80;
         server_name technobar.by *.technobar.by;
@@ -28,41 +29,51 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-        # Главная страница
         location / {
-            proxy_pass http://nextjs;
+            proxy_pass http://nextjs;  
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-            add_header Access-Control-Allow-Credentials "true" always;
-
-            if ($request_method = OPTIONS) {
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
                 add_header Content-Length 0;
                 add_header Content-Type text/plain;
                 return 204;
             }
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
         }
 
-        # Редиректы для статических страниц
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-            return 301 https://technobar.by$uri$is_args$args;
+        # Дополнительные страницы
+        location ~ ^/(pk|thank-you|[a-zA-Z0-9-]+)$ {
+            proxy_pass http://nextjs;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
 
         # Next.js статические файлы
         location /_next/ {
             proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
 
         location /static/ {
             proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 
@@ -76,26 +87,46 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+            return 301 https://technobar.by$uri$is_args$args;
+        }
 
         location / {
-            proxy_pass http://nextjs/phone;
+            proxy_pass http://nextjs/phone;  # Проксируем на /phone
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-            add_header Access-Control-Allow-Credentials "true" always;
-
-            if ($request_method = OPTIONS) {
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
                 add_header Content-Length 0;
                 add_header Content-Type text/plain;
                 return 204;
             }
+
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+        }
+
+        # Next.js статические файлы
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 
@@ -109,30 +140,50 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+            return 301 https://technobar.by$uri$is_args$args;
+        }
 
         location / {
-            proxy_pass http://nextjs/phone2;
+            proxy_pass http://nextjs/phone2;  # Проксируем на /phone2
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-            add_header Access-Control-Allow-Credentials "true" always;
-
-            if ($request_method = OPTIONS) {
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
                 add_header Content-Length 0;
                 add_header Content-Type text/plain;
                 return 204;
             }
+
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+        }
+
+        # Next.js статические файлы
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 
-    # Пример поддомена laptop1.technobar.by
+    # Поддомен laptop1.technobar.by
     server {
         listen 443 ssl;
         server_name laptop1.technobar.by;
@@ -142,26 +193,99 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+            return 301 https://technobar.by$uri$is_args$args;
+        }
 
         location / {
-            proxy_pass http://nextjs/laptop1;
+            proxy_pass http://nextjs/laptop1;  # Проксируем на /laptop1
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-            add_header Access-Control-Allow-Credentials "true" always;
-
-            if ($request_method = OPTIONS) {
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
                 add_header Content-Length 0;
                 add_header Content-Type text/plain;
                 return 204;
             }
+            
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+        }
+
+        # Next.js статические файлы
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    # Поддомен tv1.technobar.by
+    server {
+        listen 443 ssl;
+        server_name tv1.technobar.by;
+
+        ssl_certificate /etc/letsencrypt/live/tv1.technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tv1.technobar.by/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+            return 301 https://technobar.by$uri$is_args$args;
+        }
+
+        location / {
+            proxy_pass http://nextjs/tv1;  # Проксируем на /tv1
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+            
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+        }
+
+        # Next.js статические файлы
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 }
