add config cvirko-vadim

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,6 @@
 events {}
 
 http {
-    # Общие CORS заголовки
 
     map $http_origin $cors {
         default "";
@@ -12,20 +11,18 @@ http {
         server nextjs-app:3000;
     }
 
-    # Редирект HTTP -> HTTPS для всех доменов
     server {
         listen 80;
-        server_name technobar.by *.technobar.by;
+        server_name cvirko-vadim.ru *.cvirko-vadim.ru;
         return 301 https://$host$request_uri;
     }
 
-    # Основной домен technobar.by
     server {
         listen 443 ssl;
-        server_name technobar.by;
+        server_name cvirko-vadim.ru;
 
-        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
@@ -51,7 +48,6 @@ http {
             add_header Access-Control-Allow-Credentials "true" always;
         }
 
-        # Дополнительные страницы
         location ~ ^/(pk|thank-you|[a-zA-Z0-9-]+)$ {
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
@@ -61,7 +57,6 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Next.js статические файлы
         location /_next/ {
             proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
@@ -77,41 +72,39 @@ http {
         }
     }
 
-    # Поддомен phone.technobar.by
     server {
         listen 443 ssl;
-        server_name phone.technobar.by;
+        server_name phone.cvirko-vadim.ru phone2.cvirko-vadim.ru laptop1.cvirko-vadim.ru tv1.cvirko-vadim.ru;
 
-        ssl_certificate /etc/letsencrypt/live/phone.technobar.by/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/phone.technobar.by/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/phone.cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/phone.cvirko-vadim.ru/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+         # Редиректы фиксированных страниц
+        location ~ ^/(thank-you|pk|po|guarantee|pass)$ {
             return 301 https://technobar.by$uri$is_args$args;
         }
 
         location / {
-            proxy_pass http://nextjs/phone;  # Проксируем на /phone
+            proxy_pass http://nextjs$request_uri;  # Динамическая обработка на основе пути
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            if ($request_method = 'OPTIONS') {
+            if ($cors != "") {
                 add_header Access-Control-Allow-Origin $cors always;
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
                 add_header Access-Control-Allow-Credentials "true" always;
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
             }
 
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
         }
 
         # Next.js статические файлы
@@ -129,163 +122,12 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
     }
+   
 
-    # Поддомен phone2.technobar.by
-    server {
-        listen 443 ssl;
-        server_name phone2.technobar.by;
 
-        ssl_certificate /etc/letsencrypt/live/phone2.technobar.by/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/phone2.technobar.by/privkey.pem;
+    # Поддомен laptop1.cvirko-vadim.ru
 
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
+    # Поддомен tv1.cvirko-vadim.ru
 
-        location / {
-            proxy_pass http://nextjs/phone2;  # Проксируем на /phone2
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
-
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
-        }
-
-        # Next.js статические файлы
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-    }
-
-    # Поддомен laptop1.technobar.by
-    server {
-        listen 443 ssl;
-        server_name laptop1.technobar.by;
-
-        ssl_certificate /etc/letsencrypt/live/laptop1.technobar.by/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/laptop1.technobar.by/privkey.pem;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-
-        location / {
-            proxy_pass http://nextjs/laptop1;  # Проксируем на /laptop1
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
-            
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
-        }
-
-        # Next.js статические файлы
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-    }
-
-    # Поддомен tv1.technobar.by
-    server {
-        listen 443 ssl;
-        server_name tv1.technobar.by;
-
-        ssl_certificate /etc/letsencrypt/live/tv1.technobar.by/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/tv1.technobar.by/privkey.pem;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-
-        location / {
-            proxy_pass http://nextjs/tv1;  # Проксируем на /tv1
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
-            
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
-        }
-
-        # Next.js статические файлы
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-    }
 }
