fix nginx config  cvirko-vadim

--- a/nginx.conf
+++ b/nginx.conf
@@ -74,7 +74,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name phone.cvirko-vadim.ru phone2.cvirko-vadim.ru laptop1.cvirko-vadim.ru tv1.cvirko-vadim.ru;
+        server_name *.cvirko-vadim.ru;
 
         ssl_certificate /etc/letsencrypt/live/phone.cvirko-vadim.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/phone.cvirko-vadim.ru/privkey.pem;
@@ -88,6 +88,25 @@ http {
         }
 
         location / {
+
+            if ($uri ~* ^/(thanks|pk|po|pass|guarantee|special-path)$) {
+
+            proxy_pass http://nextjs; 
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            break;
+            }
+            set $subdomain $host;
+
+            if ($host ~* ^(.*)\.cvirko-vadim\.ru$) {
+                set $subdomain $1;
+            }
+            if ($subdomain = "www") {
+                return 301 https://cvirko-vadim.ru$request_uri;
+            }
             proxy_pass http://nextjs$request_uri;  # Динамическая обработка на основе пути
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -95,16 +114,20 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            if ($cors != "") {
-                add_header Access-Control-Allow-Origin $cors always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin "*"; # Или конкретный домен
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+                add_header Access-Control-Allow-Credentials "true";
+                return 204; # Пустой ответ на preflight-запрос
             }
-
+            add_header Access-Control-Allow-Origin "*"; 
+            add_header Access-Control-Allow-Credentials "true"; 
             if ($request_method = 'OPTIONS') {
                 return 204;
             }
+
+            return 301 https://cvirko-vadim.ru/$subdomain$request_uri;
         }
 
         # Next.js статические файлы
@@ -113,6 +136,9 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+
+            add_header Access-Control-Allow-Origin "*"; 
+            add_header Access-Control-Allow-Credentials "true"; 
         }
 
         location /static/ {
@@ -120,6 +146,9 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+            
+            add_header Access-Control-Allow-Origin "*"; 
+            add_header Access-Control-Allow-Credentials "true"; 
         }
     }
    
