--- a/nginx.conf
+++ b/nginx.conf
@@ -2,21 +2,25 @@ events {}
 
 http {
 
+    # Настройка CORS
     map $http_origin $cors {
         default "";
-        ~^https?://(.*\.technobar\.by|technobar\.by)$ $http_origin;
+        ~^https?://(.*\.cvirko-vadim\.ru|cvirko-vadim\.ru)$ $http_origin;
     }
 
+    # Backend приложения
     upstream nextjs {
         server nextjs-app:3000;
     }
 
+    # Перенаправление HTTP на HTTPS
     server {
         listen 80;
         server_name cvirko-vadim.ru *.cvirko-vadim.ru;
         return 301 https://$host$request_uri;
     }
 
+    # Основной домен
     server {
         listen 443 ssl;
         server_name cvirko-vadim.ru;
@@ -28,33 +32,19 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://nextjs;  
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
-        }
-
-        location ~ ^/(pk|thank-you|[a-zA-Z0-9-]+)$ {
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
         }
 
         location /_next/ {
@@ -62,6 +52,7 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+            add_header Access-Control-Allow-Origin $cors always;
         }
 
         location /static/ {
@@ -69,9 +60,11 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+            add_header Access-Control-Allow-Origin $cors always;
         }
     }
 
+    # Все поддомены
     server {
         listen 443 ssl;
         server_name *.cvirko-vadim.ru;
@@ -82,63 +75,34 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-         # Редиректы фиксированных страниц
+        # Редиректы фиксированных страниц
         location ~ ^/(thank-you|pk|po|guarantee|pass)$ {
             return 301 https://technobar.by$uri$is_args$args;
         }
 
+        # Обработка CORS
         location / {
-
-            if ($uri ~* ^/(thanks|pk|po|pass|guarantee|special-path)$) {
-
-            proxy_pass http://nextjs; 
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-            break;
-            }
-            set $subdomain $host;
-
-            if ($host ~* ^(.*)\.cvirko-vadim\.ru$) {
-                set $subdomain $1;
-            }
-            if ($subdomain = "www") {
-                return 301 https://cvirko-vadim.ru$request_uri;
-            }
-            proxy_pass http://nextjs$request_uri;  # Динамическая обработка на основе пути
+            proxy_pass http://nextjs;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin "*"; # Или конкретный домен
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization";
-                add_header Access-Control-Allow-Credentials "true";
-                return 204; # Пустой ответ на preflight-запрос
-            }
-            add_header Access-Control-Allow-Origin "*"; 
-            add_header Access-Control-Allow-Credentials "true"; 
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+
             if ($request_method = 'OPTIONS') {
                 return 204;
             }
-
-            return 301 https://cvirko-vadim.ru/$subdomain$request_uri;
         }
 
-        # Next.js статические файлы
         location /_next/ {
             proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-
-            add_header Access-Control-Allow-Origin "*"; 
-            add_header Access-Control-Allow-Credentials "true"; 
+            add_header Access-Control-Allow-Origin $cors always;
         }
 
         location /static/ {
@@ -146,17 +110,7 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-            
-            add_header Access-Control-Allow-Origin "*"; 
-            add_header Access-Control-Allow-Credentials "true"; 
+            add_header Access-Control-Allow-Origin $cors always;
         }
     }
-   
-
-
-    # Поддомен laptop1.cvirko-vadim.ru
-
-
-    # Поддомен tv1.cvirko-vadim.ru
-
 }
