--- a/nginx.conf
+++ b/nginx.conf
@@ -64,39 +64,33 @@ http {
         }
     }
 
-    # Все поддомены
+    # Поддомены
     server {
         listen 443 ssl;
         server_name *.cvirko-vadim.ru;
 
-        ssl_certificate /etc/letsencrypt/live/phone.cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/phone.cvirko-vadim.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # Редиректы фиксированных страниц
-        location ~ ^/(thank-you|pk|po|guarantee|pass)$ {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-
-        # Обработка CORS
+        # Редирект поддоменов на соответствующие страницы основного домена
         location / {
-            proxy_pass http://nextjs;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
-
-            if ($request_method = 'OPTIONS') {
-                return 204;
+            set $subdomain "";
+            if ($host ~* ^(.*?)\.cvirko-vadim\.ru$) {
+                set $subdomain $1;
             }
+
+            # Исключение для неподдерживаемых поддоменов
+            if ($subdomain = "") {
+                return 404;
+            }
+
+            return 301 https://cvirko-vadim.ru/$subdomain;
         }
 
+        # Next.js статические файлы (если поддомен должен отдавать статику)
         location /_next/ {
             proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
