--- a/nginx.conf
+++ b/nginx.conf
@@ -70,7 +70,7 @@ http {
         server_name *.cvirko-vadim.ru;
 
         ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
