--- a/nginx.conf
+++ b/nginx.conf
@@ -64,30 +64,42 @@ http {
         }
     }
 
-    # Поддомены
+    # Обработка поддоменов
     server {
         listen 443 ssl;
         server_name *.cvirko-vadim.ru;
 
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/phone.cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/phone.cvirko-vadim.ru/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # Редирект поддоменов на соответствующие страницы основного домена
         location / {
+            # Извлечение поддомена
             set $subdomain "";
             if ($host ~* ^(.*?)\.cvirko-vadim\.ru$) {
                 set $subdomain $1;
             }
 
-            # Исключение для неподдерживаемых поддоменов
-            if ($subdomain = "") {
-                return 404;
-            }
+            # Если поддомен распознан, перенаправляем на соответствующий путь
+            rewrite ^(.*)$ /$subdomain$1 break;
 
-            return 301 https://cvirko-vadim.ru/$subdomain;
+            # Прокси к backend
+            proxy_pass http://nextjs;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+
+            # CORS
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
         }
 
         # Next.js статические файлы (если поддомен должен отдавать статику)
