--- a/nginx.conf
+++ b/nginx.conf
@@ -64,13 +64,13 @@ http {
         }
     }
 
-    # Обработка поддоменов
+    # Поддомены
     server {
         listen 443 ssl;
         server_name *.cvirko-vadim.ru;
 
-        ssl_certificate /etc/letsencrypt/live/phone.cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/phone.cvirko-vadim.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
@@ -82,10 +82,10 @@ http {
                 set $subdomain $1;
             }
 
-            # Если поддомен распознан, перенаправляем на соответствующий путь
+            # Прокидываем запрос с добавлением пути поддомена
             rewrite ^(.*)$ /$subdomain$1 break;
 
-            # Прокси к backend
+            # Прокси запросов в backend
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -102,7 +102,6 @@ http {
             }
         }
 
-        # Next.js статические файлы (если поддомен должен отдавать статику)
         location /_next/ {
             proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
