--- a/nginx.conf
+++ b/nginx.conf
@@ -2,12 +2,6 @@ events {}
 
 http {
 
-    # Настройка CORS
-    map $http_origin $cors {
-        default "";
-        ~^https?://(.*\.cvirko-vadim\.ru|cvirko-vadim\.ru)$ $http_origin;
-    }
-
     # Backend приложения
     upstream nextjs {
         server nextjs-app:3000;
@@ -39,8 +33,9 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
+            # Заголовки CORS
+            add_header Access-Control-Allow-Origin "*";
+            add_header Access-Control-Allow-Credentials "true";
 
             if ($request_method = 'OPTIONS') {
                 return 204;
@@ -52,7 +47,6 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-            add_header Access-Control-Allow-Origin $cors always;
         }
 
         location /static/ {
@@ -60,7 +54,6 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-            add_header Access-Control-Allow-Origin $cors always;
         }
     }
 
@@ -76,13 +69,13 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            # Извлечение поддомена
+            # Извлечение имени поддомена
             set $subdomain "";
             if ($host ~* ^(.*?)\.cvirko-vadim\.ru$) {
                 set $subdomain $1;
             }
 
-            # Прокидываем запрос с добавлением пути поддомена
+            # Прокидывание поддомена в URL для приложения
             rewrite ^(.*)$ /$subdomain$1 break;
 
             # Прокси запросов в backend
@@ -93,9 +86,9 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            # CORS
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
+            # Заголовки CORS
+            add_header Access-Control-Allow-Origin "*";
+            add_header Access-Control-Allow-Credentials "true";
 
             if ($request_method = 'OPTIONS') {
                 return 204;
@@ -107,7 +100,7 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Origin "*";
         }
 
         location /static/ {
@@ -115,7 +108,7 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Origin "*";
         }
     }
 }
