--- a/nginx.conf
+++ b/nginx.conf
@@ -14,54 +14,12 @@ http {
         return 301 https://$host$request_uri;
     }
 
-    # Основной домен
-    server {
-        listen 443 ssl;
-        server_name cvirko-vadim.ru;
-
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        location / {
-            proxy_pass http://nextjs;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-
-            # Заголовки CORS
-            add_header Access-Control-Allow-Origin "*";
-            add_header Access-Control-Allow-Credentials "true";
-
-            if ($request_method = 'OPTIONS') {
-                return 204;
-            }
-        }
-
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-    }
-
-    # Поддомены
+    # Универсальная обработка поддоменов
     server {
         listen 443 ssl;
         server_name *.cvirko-vadim.ru;
 
+        # Указываем SSL-сертификаты (можно настроить wildcard-сертификат для *.cvirko-vadim.ru)
         ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
 
@@ -69,16 +27,16 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            # Извлечение имени поддомена
+            # Извлечение поддомена из имени хоста
             set $subdomain "";
             if ($host ~* ^(.*?)\.cvirko-vadim\.ru$) {
                 set $subdomain $1;
             }
 
-            # Прокидывание поддомена в URL для приложения
-            rewrite ^(.*)$ /$subdomain$1 break;
+            # Прокидываем поддомен в путь для Next.js
+            rewrite ^/(.*)$ /$subdomain/$1 break;
 
-            # Прокси запросов в backend
+            # Проксируем запросы на Next.js
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -86,7 +44,7 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            # Заголовки CORS
+            # CORS-заголовки
             add_header Access-Control-Allow-Origin "*";
             add_header Access-Control-Allow-Credentials "true";
 
@@ -95,12 +53,12 @@ http {
             }
         }
 
+        # Next.js статические файлы
         location /_next/ {
             proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-            add_header Access-Control-Allow-Origin "*";
         }
 
         location /static/ {
@@ -108,7 +66,6 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-            add_header Access-Control-Allow-Origin "*";
         }
     }
 }
